# routes/api.php
@@ -21,5 +21,6 @@ Route::middleware('api')->group(function () {
         Route::post('/transactions/transfer', [TransactionControllerApi::class, 'transfer']);
         Route::post('/transactions/deposit', [TransactionControllerApi::class, 'deposit']);
         Route::post('/transactions/reverse/{id}', [TransactionControllerApi::class, 'reverse']);
+        Route::get('/transactions/statement', [TransactionControllerApi::class, 'statement']);
     });
 });
